# swagger.yaml
@@ -21,6 +21,9 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+      security:
+        - BearerAuth: []
+
   /users/add:
     post:
       summary: Create User
@@ -39,6 +42,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+      security:
+        - BearerAuth: []
   /users/{id}:
     get:
       summary: Get User by ID
@@ -57,6 +62,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+      security:
+        - BearerAuth: []
+
     delete:
       summary: Delete User
       tags:
@@ -70,6 +78,8 @@ paths:
       responses:
         '200':
           description: User deleted successfully
+      security:
+        - BearerAuth: []
   /users/update:
     patch:
       summary: Update User
@@ -88,6 +98,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+      security:
+        - BearerAuth: []
 
   /users/take:
     post:
@@ -103,6 +115,8 @@ paths:
       responses:
         '200':
           description: Book taken successfully
+      security:
+        - BearerAuth: []
   /users/return:
     post:
       summary: Return Book from User
@@ -117,6 +131,8 @@ paths:
       responses:
         '200':
           description: Book returned successfully
+      security:
+        - BearerAuth: []
   /books:
     get:
       summary: Get All Books
@@ -131,6 +147,9 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Book'
+      security:
+        - BearerAuth: []
+
   /books/add:
     post:
       summary: Create Book
@@ -149,6 +168,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
+      security:
+        - BearerAuth: []
+
   /books/{id}:
     get:
       summary: Get Book by ID
@@ -167,6 +189,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
+      security:
+        - BearerAuth: []
+
     delete:
       summary: Delete Book
       tags:
@@ -180,6 +205,9 @@ paths:
       responses:
         '200':
           description: Book deleted successfully
+      security:
+        - BearerAuth: []
+
   /books/update:
     patch:
       summary: Update Book
@@ -198,6 +226,54 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
+      security:
+        - BearerAuth: []
+
+  /auth/register:
+    post:
+      summary: User register
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: User created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /auth/login:
+    post:
+      summary: User login
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: User login successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /auth/check-auth:
+    post:
+      summary: Check user auth
+      tags:
+        - auth
+      responses:
+        '200':
+          description: User check auth successfully
+
 components:
   schemas:
     User:
@@ -242,3 +318,9 @@ components:
           type: integer
         bookId:
           type: integer
+  securitySchemes:
+    BearerAuth:
+      type: apiKey
+      in: header
+      name: Authorization
+      description: Enter 'Bearer <token>' without quotes.
